--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 #应用启动端口设置
-server.port=8080
+server.port=8081
 
 
 #=================================微信相关====================================
 #公众号
 wxpay.appid=wx5beac15ca207cdd40c
 wxpay.appsecret=5548012f33417fdsdsdd6f96b382fe548215e9
+
+#微信开放平台配置
+wxopen.appid=wx025575eac69a2d5b
+wxopen.appsecret=deeae310a387fa9d3e8f3830ce64caac
+#重定向url
+wxopen.redirect_url=http://16web.tunnel.qydev.com/api/v1/wechat/user/callback
+
+
 
 
 
@@ -16,7 +24,7 @@ wxpay.appsecret=5548012f33417fdsdsdd6f96b382fe548215e9
 
 spring.datasource.url=jdbc:mysql://localhost:3306/xdclass?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username =root
-spring.datasource.password =123456
+spring.datasource.password =password
 #如果不使用默认的数据源 （com.zaxxer.hikari.HikariDataSource）
 spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
 
